# lucid

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.internal.yaml  config.work.yaml  config.yaml  instructions.md
deploy/: docker-compose.lucid-memory.example.yml
deploy/caddy/: lucid-graphiti.labels.example.yml
deploy/env/: lucid-falkordb.env.example  lucid-graphiti.env.example
deploy/graphiti/: config-docker-falkordb.yaml
deploy/maintenance/: README.md  common.py  reembed_group.py  replay_group.py
docker/: Dockerfile.standalone
docs/: 2026-03-22-lucid-knowledge-model-note.md  README.md  deployment.md  maintenance.md  runtime-notes.md
docs/agents/: README.md  graphiti-upstream-instruction-reference.md  shared-instruction.md
openspec/changes/add-agent-memory-hooks/: design.md  proposal.md  tasks.md
openspec/changes/add-agent-memory-hooks/specs/agent-memory-hooks/: spec.md
openspec/changes/add-lucid-ingestion-skill-interface/: design.md  proposal.md  tasks.md
openspec/changes/add-lucid-memory-ui-access/: proposal.md
openspec/changes/add-shared-agent-memory-platform/: README.md  design.md  proposal.md  tasks.md
skills/lucid-memory/: SKILL.md
skills/lucid-memory/references/: bootstrap.md  validation.md
skills/lucid-memory/scripts/: lucid-mcp2cli.sh  lucid-session-start.sh
src/lucid_mcp/: __init__.py  config.py  factories.py  falkordb_driver.py  formatting.py  policy.py  queue_service.py  response_types.py  server.py
tests/: test_config.py  test_falkordb_driver.py  test_policy.py
(+7 files in other folders)
